--- a/.hintrc
+++ b/.hintrc
@@ -1,7 +1,5 @@
 {
-  "extends": [
-    "development"
-  ],
+  "extends": ["development"],
   "hints": {
     "axe/text-alternatives": [
       "default",
@@ -12,9 +10,7 @@
     "compat-api/css": [
       "default",
       {
-        "ignore": [
-          "-webkit-text-size-adjust"
-        ]
+        "ignore": ["-webkit-text-size-adjust"]
       }
     ]
   }
